--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -1,125 +1,87 @@
-@define-color background        #212338;
-@define-color currentline       #323449;
-@define-color foreground        #ebfafa;
-@define-color comment           #7081d0;
-@define-color cyan              #04d1f9;
-@define-color green             #37f499;
-@define-color orange            #f7c67f;
-@define-color pink              #f265b5;
-@define-color purple            #a48cf2;
-@define-color red               #f16c75;
-@define-color yellow            #f1fc79;
-@define-color g_dark            #171928;
-@define-color bg_highlight      #292e42;
-@define-color terminal_black    #414868;
-@define-color fg_dark           #ABB4DA;
-@define-color fg_gutter         #3b4261;
-@define-color dark3             #6473B7;
-@define-color comment           #7081d0;
-@define-color dark5             #5866A2;
-@define-color visual            #76639e;
-@define-color dark_cyan         #10A1BD;
-@define-color magenta2          #bf4f8e;
-@define-color magenta3          #722f55;
-@define-color dark_yellow       #c0c95f;
-@define-color dark_green        #33C57F;
-@define-color bright_red        #f0313e;
+@define-color gruv0 #282828;
+@define-color gruv1 #32302f;
+@define-color gruv2 #45403d;
+@define-color gruv3 #5a524c;
 
-@define-color sunken_depths_grey #212337;
-@define-color shallow_depths_grey #323449;
-@define-color lighthouse_white #ebfafa;
-@define-color old_one_purple #7081d0;
-@define-color watery_tomb_blue #04d1f9;
-@define-color great_old_one_green #37f499;
-@define-color dreaming_orange #f7c67f;
-@define-color pustule_pink #f265b5;
-@define-color lovecraft_purple #a48cf2;
-@define-color rlyeh_red #f16c75;
-@define-color gold_of_yuggoth #f1fc79;
+@define-color gruv4 #fbf1c7;
+@define-color gruv5 #f4e8be;
+@define-color gruv6 #eee0b7;
 
-* {
-  font-family: 'IosevkaTerm Nerd Font Mono';
-  font-size: 18px;
-}
+@define-color gruv7 #a89984;
+@define-color gruv8 #928374;
+@define-color gruv9 #7c6f64;
+@define-color gruv10 #504945;
+@define-color red #ea6962;
 
-/* Window */
+@define-color orange #e78a4e;
+@define-color yellow #d8a657;
+@define-color aqua #89b482;
+@define-color purple #d3869b;
+
+@define-color reddark #c14a4a;
+@define-color yellowdark #b47109;
+
+@define-color foreground @gruv9;
+@define-color bg-transparent rgba(0, 0, 0, 0.3);
+
 window {
-  margin: 0px;
-  padding: 10px;
-  border: 2px solid @old_one_purple;
-  border-radius: 8px;
-  background-color: @sunken_depths_grey;
+  background-color: @bg-transparent;
+  border-radius: 6px;
+  border: 2px solid @gruv6;
+  padding: 4px;
 }
 
-/* Inner Box */
-#inner-box {
-  margin: 5px;
-  padding: 10px;
-  border: none;
-  background-color: @sunken_depths_grey;
-}
-
-/* Outer Box */
-#outer-box {
-  margin: 5px;
-  padding: 10px;
-  border: none;
-  background-color: @sunken_depths_grey;
-}
-
-/* Scroll */
-#scroll {
-  margin: 0px;
-  padding: 10px;
-  border: none;
-  background-color: @sunken_depts_grey;
-}
-
-/* Input */
 #input {
-  margin: 5px 20px;
-  padding: 10px;
-  border: none;
-  border-radius: 0.1em;
-  color: @watery_tomb_blue;
-  background-color: @sunken_depths_grey;
+  color: @gruv6;
+  background-color: transparent;
+  border: 4px solid @gruv6;
+  border-radius: 0px;
+  padding: 14px;
+  font-family: "IosevkaTerm Nerd Font Mono";
 }
 
-#input image {
-    border: none;
-    color: @rlyeh_red;
+#outer-box {
+  background-color: transparent;
+  padding: 0;
 }
 
-#input * {
-  outline: 4px solid @rlyeh_red!important;
-}
-
-/* Text */
-#text {
-  margin: 5px;
-  border: none;
-  color: @watery_tomb_blue;
+#inner-box {
+  background-color: transparent;
+  padding: 0;
 }
 
 #entry {
-  background-color: @sunken_depths_grey;
-}
-
-#entry arrow {
+  background-color: transparent;
+  color: @gruv6;
+  padding: 5px;
+  border-radius: 0;
   border: none;
-  color: @old_one_purple;
 }
 
-/* Selected Entry */
 #entry:selected {
-  border: 0.11em solid @old_one_purple;
+  background-color: @gruv7;
+  color: @gruv0;
 }
 
-#entry:selected #text {
-  color: @love_craft_purple;
+#entry:active {
+  background-color: @yellowdark;
 }
 
-#entry:drop(active) {
-  background-color: @old_one_purple!important;
+#entry:focus {
+  background-color: @yellow;
 }
 
+#text {
+  color: @gruv6;
+}
+
+#icon {
+  margin-right: 10px;
+}
+
+#message {
+  color: @gruv6;
+  background-color: transparent;
+  border: none;
+  padding: 10px;
+}
