--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,127 +1,81 @@
-@import "eldritch.css";
-
 * {
-    font-family: "IosevkaTerm Nerd Font Mono";
-    font-size: 16px;
-    min-height: 0;
-    font-weight: bold;
+  font-family: "IosevkaTerm Nerd Font Mono";
+  font-weight: bold;
+  font-size: 100%;
+  font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
+  min-height: 0;
+  padding: 1px;
 }
 
 window#waybar {
-    background: transparent;
-    background-color: @sunken_depths_grey;
-    color: @overlay0;
-    transition-property: background-color;
-    transition-duration: 0.1s;
-    border-bottom: 1px solid @overlay1;
+  background-color: rgba(0, 0, 0, 0);
+  transition-property: background-color;
+  transition-duration: 0.5s;
+}
+
+window#waybar.hidden {
+  opacity: 0.5;
+}
+
+window#waybar.empty {
+  background-color: transparent;
+}
+
+#waybar.empty #window {
+  padding: 0px;
+  border: 0px;
+  background-color: transparent;
+}
+
+tooltip {
+  opacity: 1;
+  border-radius: 0px;
+}
+
+tooltip label {
+  padding: 10px;
+  color: #ebdbb2;
+}
+
+#custom-cava
+#clock,
+#cpu,
+#memory,
+#network,
+#pulseaudio,
+#temperature,
+#workspaces,
+#custom-poweroff,
+#custom-menu,
+#custom-swaync {
+  border-radius: 0px;
+  color: #ebdbb2;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 6px;
+  padding-right: 6px;
 }
 
 #window {
-    margin: 8px;
-    padding-left: 8;
-    padding-right: 8;
-}
-
-button {
-    box-shadow: inset 0 -3px transparent;
-    border: none;
-    border-radius: 0;
-}
-
-button:hover {
-    background: inherit;
-    color: @old_one_purple;
-    border-top: 2px solid @old_one_purple;
+  color: #ebdbb2;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-right: 6px;
+  padding-left: 6px;
+  border-radius: 0px;
 }
 
 #workspaces button {
-    padding: 0 4px;
+  margin: 1px;
+  box-shadow: none;
+  text-shadow: none;
+  border-radius: 0px;
+  padding-left: 6px;
+  padding-right: 6px;
+  background-color: #ebdbb2;
+  color: #282828;
 }
 
-#workspaces button.focused {
-    background-color: rgba(0, 0, 0, 0.3);
-    color: @lovecract_purple;
-    border-top: 2px solid @lovecract_purple;
-}
-
-#workspaces button.active {
-    background-color: rgba(0, 0, 0, 0.3);
-    color: @old_one_purple;
-    border-top: 2px solid @old_one_purple;
-}
-
-#workspaces button.urgent {
-    background-color: #eb4d4b;
-}
-
-#pulseaudio,
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#wireplumber,
-#tray,
-#network,
-#mode,
-#scratchpad {
-  margin-top: 2px;
-  margin-bottom: 2px;
-  margin-left: 4px;
-  margin-right: 4px;
-  padding-left: 4px;
-  padding-right: 4px;
-}
-
-#clock {
-    color: @lovecraft_purple;
-    border-bottom: 2px solid @lovecraft_purple;
-}
-
-#clock.date {
-    color: @lovecraft_purple;
-    border-bottom: 2px solid @lovecraft_purple;
-}
-
-#pulseaudio {
-    color: @watery_tomb_blue;
-    border-bottom: 2px solid @watery_tomb_blue;
-}
-
-#network {
-    color: @gold_of_yuggoth;
-    border-bottom: 2px solid @gold_of_yuggoth;
-}
-
-#idle_inhibitor {
-    margin-right: 12px;
-    color: #7cb342;
-}
-
-#idle_inhibitor.activated {
-    color: @pustule_pink;
-}
-
-#battery {
-    color: @great_old_one_green;
-    border-bottom: 2px solid @greath_old_one_green;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left>widget:first-child>#workspaces {
-    margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right>widget:last-child>#workspaces {
-    margin-right: 0;
-}
-
-#custom-vpn {
-    color: @dreaming_orange;
-    border-radius: 15px;
-    padding-left: 6px;
-    padding-right: 6px;
+#temperature.critical {
+  background-color: red;
 }
