--- a/wofi/.config/wofi/eldritchcolors/style.css
+++ b/wofi/.config/wofi/eldritchcolors/style.css
@@ -37,5 +37,89 @@
 @define-color rlyeh_red #f16c75;
 @define-color gold_of_yuggoth #f1fc79;
 
+* {
+  font-family: 'IosevkaTerm Nerd Font Mono';
+  font-size: 18px;
+}
 
+/* Window */
+window {
+  margin: 0px;
+  padding: 10px;
+  border: 2px solid @old_one_purple;
+  border-radius: 8px;
+  background-color: @sunken_depths_grey;
+}
+
+/* Inner Box */
+#inner-box {
+  margin: 5px;
+  padding: 10px;
+  border: none;
+  background-color: @sunken_depths_grey;
+}
+
+/* Outer Box */
+#outer-box {
+  margin: 5px;
+  padding: 10px;
+  border: none;
+  background-color: @sunken_depths_grey;
+}
+
+/* Scroll */
+#scroll {
+  margin: 0px;
+  padding: 10px;
+  border: none;
+  background-color: @sunken_depths_grey;
+}
+
+/* Input */
+#input {
+  margin: 5px 20px;
+  padding: 10px;
+  border: none;
+  border-radius: 0.1em;
+  color: @watery_tomb_blue;
+  background-color: @sunken_depths_grey;
+}
+
+#input image {
+    border: none;
+    color: @rlyeh_red;
+}
+
+#input * {
+  outline: 4px solid @rlyeh_red;
+}
+
+/* Text */
+#text {
+  margin: 5px;
+  border: none;
+  color: @watery_tomb_blue;
+}
+
+#entry {
+  background-color: @sunken_depths_grey;
+}
+
+#entry arrow {
+  border: none;
+  color: @old_one_purple;
+}
+
+/* Selected Entry */
+#entry:selected {
+  border: 0.11em solid @old_one_purple;
+}
+
+#entry:selected #text {
+  color: @lovecraft_purple;
+}
+
+#entry:drop(active) {
+  background-color: @old_one_purple;
+}
 
