--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "IosevkaTerm Nerd Font Mono";
+  font-family: "IosevkaTerm Nerd Font";
   font-weight: bold;
   font-size: 100%;
   font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
