--- a/wlogout/.config/wlogout/style.css
+++ b/wlogout/.config/wlogout/style.css
@@ -32,31 +32,34 @@ button:focus {
 }
 
 #lock {
-  background-image: image(url("/usr/share/wlogout/icons/lock.png"),
-                         url("/usr/local/share/wlogout/icons/lock.png"));
+  background-image: image(url("./icons/lock.png"), url("./icons/lock.png"));
 }
 
 #logout {
-  background-image: image(url("/usr/share/wlogout/icons/logout.png"),
-                          url("/usr/local/share/wlogout/icons/logout.png"));
+  background-image: image(url("./icons/logout.png"), url("./icons/logout.png"));
 }
 
 #suspend {
-  background-image: image(url("/usr/share/wlogout/icons/suspend.png"),
-                          url("/usr/local/share/wlogout/icons/suspend.png"));
+  background-image: image(
+    url("./icons/suspend.png"),
+    url("./icons/suspend.png")
+  );
 }
 
 #hibernate {
-  background-image: image(url("/usr/share/wlogout/icons/hibernate.png"),
-                          url("/usr/local/share/wlogout/icons/hibernate.png"));
+  background-image: image(
+    url("./icons/hibernate.png"),
+    url("./icons/hibernate.png")
+  );
 }
 
 #shutdown {
-  background-image: image(url("/usr/share/wlogout/icons/shutdown.png"),
-                          url("/usr/local/share/wlogout/icons/shutdown.png"));
+  background-image: image(
+    url("./icons/shutdown.png"),
+    url("./icons/shutdown.png")
+  );
 }
 
 #reboot {
-  background-image: image(url("/usr/share/wlogout/icons/reboot.png"),
-                         url("/usr/local/share/wlogout/icons/reboot.png"));
+  background-image: image(url("./icons/reboot.png"), url("./icons/reboot.png"));
 }
